details section & footer

--- a/index.html
+++ b/index.html
@@ -79,6 +79,80 @@
           </div>
         </div>
       </div>
+      <div class="details">
+        <h3>مجموعة تفاصيل عنا</h3>
+        <h6>مجموعة تفاصيل لشرح من نحن</h6>
+        <div class="details-list">
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+          <div class="detail">
+            <i class="fa-solid fa-earth-asia"></i>
+            <h2>الخاصية الثانية</h2>
+            <p>
+              شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح
+              الخاصية الأولى شرح الخاصية الأولى شرح الخاصية الأولى شرح الخاصية
+            </p>
+
+          </div>
+
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <h3>مطورون</h3>
+      <p>تواصل معنا الآن</p>
+      <div class="icons">
+        <a href="#"><i class="icon fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="icon fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="icon fa-brands fa-twitter"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
