--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </li>
         </ul>
         <button class="cta dark">تسجيل الدخول</button>
+        <i id="mobile-toggle" class="fa-solid fa-bars"></i>
       </nav>
       <div class="hero">
         <h1><span>مطورون</span> خيارك الأمثل لتصميم المواقع الالكترونية</h1>
@@ -154,5 +155,6 @@
         <a href="#"><i class="icon fa-brands fa-twitter"></i></a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
